# keter-node

./: .gitignore  LICENSE  README.md  keter-node.cabal  toyproc.keter
keter-node-root/node-types/: impulse-node.keter
src/Keter/: Node.hs
src/Keter/Node/: .#Internal.hs  Configuration.hs  Internal.hs  Lens.hs  LensComb.hs  Tests.hs  Types.lhs  Types.md
temp/: impulse-node.keter
temp/config/: keter-node.yaml  keter.yaml
test/Keter/: NodeSpec.hs
test/Keter/Node/: ConfigurationSpec.hs  TypesSpec.hs
